DFC.App.ExploreCareers/wwwroot/css/test.css
.dfe-ncs-hero-explore-career {
    background-color: #1d70b8 !important;
    min-height: 300px;
    left: -3px !important;
    gap: 0 !important;
}

@media (max-width: 768px) {
    .dfe-ncs-hero-explore-career {
        width: 390px !important;
        height: 156px !important;
        top: 7947px !important;
        left: 7730px !important;
    }
}

section[aria-label="Search"] {
    margin-top: 15px !important;
    margin-bottom: 60px !important;
}

.dfe-ncs-govuk-main-wrapper-explore-career {
    margin-top: 60px;
}

.dfe-grid-container-explore-career {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: stretch; /* Ensures all cards stretch to match the tallest card */
    gap: 20px; /* Space between items */
}

.dfe-card-expolore-career {
    flex: 1 1 calc(33.333% - 15px); /* Three items per row with space */
    box-sizing: border-box;
    width: 300px !important; /* Fixed width */
    background: #F3F2F1; /* Gray background color */
    color: #ffffff; /* Optional: Set text color to white for better contrast */
    top: 501px !important;
    left: 140px !important;
    gap: 0 !important;
}

    .dfe-card-expolore-career h2 {
        font-family: 'Transport', arial, sans-serif;
        font-weight: 700;
        font-size: 19px;
        line-height: 25px;
        color: #1d70b8; /* Header color */
        margin: 20px;
    }

.dfe-card-description-explore-career {
    font-family: 'Transport', arial, sans-serif;
    font-weight: 300;
    font-size: 19px;
    color: #000;
    line-height: 25px;
    margin: 20px;
}

.explore-sector-img {
    max-width: 100%;
    height: auto;
    margin-bottom: 15px;
}

.dfe-card-placeholder {
    background: none; /* Gray background color for placeholder */
    border: none; /* No border */
    padding: 15px; /* Padding to match other cards */
    height: 150px; /* Example height, adjust as needed */
}

#speaktoanadvisor {
    background-color: #5694ca25 !important;
    margin: 5em 0 !important; /* Adjust margin values for top/bottom and remove left/right margin */
}

    #speaktoanadvisor p {
        font-family: 'Transport', arial, sans-serif;
        font-weight: 300;
        font-size: 19px;
    }

#speaktoanadvisorheader {
    margin-top: 2em;
    color: #1D70B8;
}

.speak-to-adviser__header__max-width {
    max-width: 330px !important;
}

.adviser__header__width-text {
    max-width: 2000px !important;
}

#phonenumberspan {
    color: #1D70B8;
    font-weight: bold;
    text-decoration: underline;
}

.ncs-search-form__container {
    border-bottom: 10px solid #5694ca;
}

.block-ncs-app-explorer {
    margin-top: 70px !important;
    background-color: #1d70b8 !important;
}

    .block-ncs-app-explorer span {
        font-family: "GDS Transport", arial, sans-serif;
        color: #f3f2f1 !important;
        font-size: 48px;
    }

.sub-heading-app-explorer {
    background-color: #1d70b8 !important;
    margin-top: 15px !important;
}

    .sub-heading-app-explorer span {
        padding: 2px 0;
        color: #f3f2f1 !important;
        font-size: 24px;
    }

/* Sector landing page scss */
.govuk-grid-row-sector-landing {
    display: flex;
    flex-wrap: wrap;
    margin-top: 30px;
}

.dfe-card-expolore-career-sector-landing {
    flex: 1 1 45%; /* Allow two cards per row, adjust this percentage if needed */
    margin: 10px;
    display: flex;
}

@media (max-width: 768px) {
    .dfe-card-expolore-career-sector-landing {
        flex: 1 1 100%; /* Full width on small screens */
    }
}

.dfe-card-container-sector-landing {
    display: flex;
    flex-direction: column;
    justify-content: space-between; /* Space out the content */
    width: 100%;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
    padding: 16px;
}

.dfe-card-description-sector-landing {
    flex-grow: 1; /* This will allow the description to take up remaining space */
}

.sector-landing-image img {
    width: 100%; /* Ensure the image takes up 100% of the card's width */
    max-width: 100%; /* Prevents the image from exceeding the card's width */
    height: auto; /* Maintain the image's aspect ratio */
    object-fit: cover; /* Ensure the image covers the available space */
    display: flex; /* Removes any space below the image */
}

/* Explore career page */
.blue-banner {
    position: relative;
    padding: 20px;
}

.explore-compass-image {
    position: absolute;
    width: 122px;
    right: 140px;
    top: 51px;
    bottom: 51px;
    margin: auto 0;
    object-fit: contain;
}

.govuk-grid-row-extra {
    margin-top: 60px;
    margin-bottom: 60px;
}

.govuk-grid-column-one-half-all-careers {
    margin-top: 60px;
    margin-bottom: 60px;
}

.dfe-card_explorer {
    width: 300px;
    height: 184px;
    top: 870px;
    left: 140px;
    gap: 0px; /* No gap between children if applicable */
    border: 0px; /* No initial border */
    opacity: 1; /* Assuming you meant opacity is set to visible */
    border-bottom: 4px solid #B1B4B6 !important; /* Bottom border styling */
    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1) !important; /* Soft shadow, adjust as needed */
}

.govuk-grid-row-card {
    display: flex; /* Arrange items in a row */
    gap: 25px; /* 30px gap between the cards */
}

.dfe-ec-landing-card {
    flex: 1; /* Allow cards to take equal width */
    max-width: 45%; /* Optional: Control the max width of each card */
}

.dfc-code-search-jpTitle-extra {
    margin-left: 20px;
}

.dfc-code-ancher-underline {
    text-decoration: underline !important; /* Apply underline */
    color: #1d70b8;
}

/* all-careers */
.inner-block-extras-one-third {
    margin-top: 90px !important;
}

.inner-block-extras-two-thirds {
    margin-top: 60px !important;
}

.section-break-two-thirds {
    padding-top: 20px;
    padding-bottom: 40px;
}

.results-list__extra {
    padding-top: 0 !important;
}

/* Explore Career home page */
.explore-dfe-grid-container-one {
    width: 630px !important;
    right: 140px !important;
    margin-right: 30px !important;
    margin-left: -12px !important;
    box-sizing: border-box; /* Include padding and border in width */
  /*  background-color: darkred;*/
}


.explore-dfe-grid-container-two {
    width: 300px !important;
    right: 140px !important; /* 140px from the right */
  /*  margin-left: 30px !important;*/
}

.explore-dfe-grid-container {
    display: flex;
    gap: 30px; /* 30px gap between the cards */
    justify-content: space-between; /* Ensures the cards are spaced evenly */
    flex-wrap: wrap; /* Ensures cards wrap to the next row if the screen is too small */
}

.explore-dfe-card {
    width: 300px; /* Set the width of each card */
    background-color: #f5f5f5; /* Optional background color */
    border: 1px solid #dcdcdc; /* Optional border */
    border-radius: 8px; /* Optional rounded corners */
    padding: 16px; /* Optional padding inside the card */
    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Optional box shadow for the card */
}

.explore-dfe-card-container h3 {
    font-size: 19px !important;
    margin-top: 0;
    margin-bottom: 10px;
}

.explore-dfe-card-container p {
    font-size: 19px !important;
    color: #6a6a6a; /* Optional text color */
}

.explore-block-ncs span {
    font-size: 48px !important; /* Ensure the font size for spans inside the block ncs */
}

.explore-sub-heading {
    font-size: 24px !important;
    margin-bottom: 55px !important;
}


.explor-career-govuk-grid-column-full {
    box-sizing: border-box; /* Include padding and border in element's total width and height */
    width: 100%; /* Maintain full width */
    padding: 60px 15px; /* Padding for spacing */
    max-width: 1200px; /* Limit the maximum width for larger screens */
    margin: 0 auto; /* Center the element */
    overflow: hidden; /* Prevent overflow */
}

/* Responsive adjustments */
@media (max-width: 768px) {
    .explor-career-govuk-grid-column-full {
        padding: 30px 10px; /* Less padding on smaller screens */
    }
}


.img-container {
    position: absolute;  
    top: 51px; /* Position the image from the top */
    left: 840px; /* Position the image from the left */
    right: 140px;
    bottom: 51px;
    width: 121.75px; /* Set width as per the requirement */
    height: 120.15px; /* Set height as per the requirement */
    display: flex; /* In case you add other items later */
    justify-content: center;
    align-items: center;
}

.explore-careers-image {
    width: 100%; /* Adjust as needed */
    height: auto; /* Maintain aspect ratio */
}

@media (max-width: 768px) {
    .img-container {
        padding-top: 10px; /* Adjust for smaller screens */
    }

    .explore-careers-image {
        max-width: 100%; /* Allow the image to fill */
        height: auto; /* Maintain aspect ratio */
    }
}

/* Explore Career Banner */
.explore-search {
    margin-bottom: 70px !important;
}

.explore-hero {
    height: 275px !important;
    background-color: #1d70b8 !important;
}

.explore-heading-xl {
    font-family: "GDS Transport", arial, sans-serif;
    background-color: #1d70b8 !important;
    font-size: 48px !important;
    margin-bottom: 15px !important;
}

.explore-block-ncs span {
    color: #f3f2f1 !important;
    font-size: 48px !important; /* Ensure the font size for spans inside the block ncs */
}

.explore-body span {
    color: #f3f2f1 !important;
    font-size: 24px !important;
}

/* Responsive adjustments */
@media (max-width: 768px) {
    .dfe-card-expolore-career {
        flex: 1 1 100%; /* Full width on small screens */
    }
}

.ec-viewall-filter-button {
    margin-top: 40px;
}

.ec-viewall-clear-button {
    margin-left: auto !important; 
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.ec-viewall-govuk-heading-s {
    margin-bottom: 40px !important;
}

.salary-label {
    font-weight: bold;
}

